// proto/players.proto
syntax="proto3";

package players;
option go_package="realmadrid/protos";

message Player {
    int64 id = 1;
    string name = 2;
    string nationality = 3;
    string position = 4;
}

message AddPlayerRequest {
    Player player =1;
}

message AddPlayerResponse {
    Player player = 1;
}

message GetPlayerRequest {
    int64 id = 1;
}

message GetPlayerResponse {
    Player player = 1;
}


service PlayerService {
    rpc AddPlayer(AddPlayerRequest) returns (AddPlayerResponse) {}
    rpc GetPlayer(GetPlayerRequest) returns (GetPlayerResponse) {}
} 
